Implement filter and order in subFolderPanel and correct folder modification date data reference.